Wed Jun 06 09:39:21 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/weight.h: Remove duplicate "need_stat(WDF);" calls,
	  accidentally added by merge of opsynonym branch in r12609.

Tue Jun 05 13:04:57 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* weight/tradweight.cc: BM25Weight -> TradWeight in exception message.

Tue Jun 05 12:43:46 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/harness/testutils.cc,tests/harness/testutils.h: Remove unused
	  test helper mset_range_is_same_percents() (thanks, lcov!)

Tue Jun 05 12:34:15 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac,tests/runsrv.in: In the testsuite, only run remote
	  servers under valgrind if x87 FP instructions are in use.

Tue Jun 05 12:12:54 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* backends/flint_lock.h: Mark FlintLock::throw_databaselockerror() as
	  XAPIAN_NORETURN.

Tue Jun 05 12:07:54 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* include/xapian/weight.h: Fix documentation comment typo ("k1" ->
	  "k").

Tue Jun 05 12:01:40 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/runsrv.in: Add explanation of why we have this script.

Tue Jun 05 11:58:47 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/Makefile.am: Pass -ldl last when compiling zlib-vg.so, as that
	  seems to be needed on Ubuntu 12.04.

Tue Jun 05 11:50:35 GMT 2012  Olly Betts <olly@survex.com>

	* backends/inmemory/inmemory_database.cc: Check if the database is
	  closed in metadata_keys_begin() for InMemory Databases.
	* Backport change from trunk:
	* tests/api_closedb.cc: We now test almost all methods of Database
	  and WritableDatabase after calling close().  (ticket#337)

Tue Jun 05 11:38:39 GMT 2012  Olly Betts <olly@survex.com>
